<?xml version="1.0" encoding="utf-8"?>
<!-- SPDX-License-Identifier: GPL-3.0-only -->
<!-- Copyright (C) 2026 Buge Studio -->
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_favorite"
        android:icon="@drawable/ic_favorite"
        android:title="@string/menu_favorite"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_share_apk"
        android:title="@string/menu_share_apk"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_export_apk"
        android:title="@string/menu_export_apk"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_export_info"
        android:title="@string/menu_export_info"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_other_languages"
        android:title="@string/menu_other_languages"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_google_play"
        android:title="@string/menu_google_play"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_f_droid"
        android:title="@string/menu_f_droid"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_grant_all_permissions"
        android:title="@string/menu_grant_all_permissions"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_revoke_all_permissions"
        android:title="@string/menu_revoke_all_permissions"
        app:showAsAction="never" />
</menu>
